# soen_fusion_zero

./: .gitignore  02_train_a_model.ipynb  INSTALL.md  README.md  TRAINING.md  ablation_model_sizes.py  analyze_training.ipynb  augment_ecei.py  benchmark_dataloader.ipynb  benchmark_mmap_read.py  build_5k_mmap_from_71k.ipynb  build_decimated_1_10_mmap.py  classification_forward_forward_mnist.html  clear_vs_disrupt_subsequences.ipynb  compare_original_vs_current.ipynb  compute_norm_stats_pca.py  data_and_normalization_viz.ipynb  dataset_ecei.py  dataset_ecei_clf.py  dataset_ecei_tcn.py  debug_pca1_input_shapes.py  debug_training_pipeline.ipynb  debug_training_pipeline.py  diagnose_spurious_end_of_signal.ipynb  ecei_mmap_dataset.py  environment-cpu.yml  environment-minimal.yml  environment.yml  eval_tcn.ipynb  evaluation_subsample.ipynb  explore_original_dataset.ipynb  fusion_init.ipynb  h5_to_mmap.py  install-pip.sh  multiscale_multimodal_correspondence.ipynb  pca1_data_and_subsequences_demo.ipynb  preprocess_subseqs.py  preprocessing_mmap.ipynb  preprocessing_mmap_ecei_mc.ipynb  preprocessing_pca.ipynb  (+24 more)
claudedocs/: HARDWARE_REFERENCE_SOEN_CHIP.md  temporal_ff_analysis.md  temporal_ff_principled_fix.md
diffusion/: DESIGN.md  README.md  evaluate.py  requirements.txt  sample.py  train.py
diffusion/config/: default.yaml
diffusion/data/: dataset.py
diffusion/models/: __init__.py  adaln_unet.py  scheduler.py
diffusion/notebooks/: visualize_clear_vs_disruption.ipynb
diffusion/scripts/: train.py
disruptcnn/: DATALOADER_COMPARISON.md  README.md  compare_original_vs_current.ipynb  dataset_original.py  decimated_dataloader_training.ipynb  loader.py  main.py  model.py  model_instancenorm.py  run_tcn_ablation_1k_instancenorm.sh  run_tcn_baseline_160_original_instancenorm.sh  sampler.py  tcn_instancenorm.py  train_original.py
docs/: Building_Models.md  CONNECTION_MASK_FORMAT.md  Gemfile  Install_Linux.md  Install_macOS.md  PyTorch_API.md  SPURIOUS_END_OF_SIGNAL_DIAGNOSIS.md  Simulation.md  TWARN_AND_FALSE_POSITIVES.md  index.md
docs/DeeperDives/: JJs.md  Multiplier_Equations_Reference.md
docs/_includes/: footer.html  head.html  header.html
docs/assets/css/: style.css  syntax.css
docs/assets/js/: links.js
docs/building_models/: Solvers_and_Simulation.md
docs/training/: distillation.md
experiments/: requirements.txt
experiments/cifar10_jepa/: README.md  config.yaml  linear_probe.py  models.py  train.py
experiments/cifar10_nf_jepa/: README.md  config.yaml  evaluate.py  models.py  train.py
notebooks/: test_dataloader_mmap.ipynb
reports/: forward_forward_soen_analysis.md  local_learning_algorithms_summary.md
soen_init_original/: MANIFEST.in  setup.py
soen_init_original/docs/: Advanced_Features.md  Cloud_Training.md  DATASETS.md  Docker_Setup.md  GUI_Tools.md  Getting_Started.md  Install_WSL2.md  Install_WSL_Setup.md  Install_Windows.md  Introduction.md  MLFLOW.md  Training_Models.md  Unit_Converter.md  _config.yml
soen_init_original/docs/DeeperDives/: ParaRNN_Solver.md
soen_init_original/docs/building_models/: Connections.md  Layer_Types.md  Source_Functions.md
soen_init_original/docs/jax/: README.md
soen_init_original/src/soen_toolkit/: errors.py  hpo_gui.py
src/soen_toolkit/: __init__.py  physical_mappings_gui.py
src/soen_toolkit/cloud/: __init__.py  config.py  example_config.yaml  session.py
src/soen_toolkit/cloud_gui/: __main__.py  main.py  main_window.py
src/soen_toolkit/core/: configs.py  noise.py
src/soen_toolkit/hardware_fixed/: README.md  __init__.py
src/soen_toolkit/model_creation_gui/: __init__.py  __main__.py  main.py
src/soen_toolkit/nn/: FEATURES.md  __init__.py  examples.py  examples_advanced.py  examples_features.py  init.py  layers.py  specs.py  structure.py
src/soen_toolkit/physics/: README.md  constants.py
src/soen_toolkit/software_flexible/: README.md  __init__.py
src/soen_toolkit/tests/: conftest.py  test_merge_layers.py  test_multiplier_connections.py  test_spike_surrogate_ops.py
src/soen_toolkit/train/: __main__.py
src/soen_toolkit/training/: README.md  __main__.py  stream_s3_logs.py  time_pooling.py  train.py
src/soen_toolkit/tutorial_notebooks/: 01_build_a_basic_model.ipynb  01b_build_a_basic_model.ipynb  01c_build_a_model_hireachical_connections.ipynb  01c_flux_matching_weight_init.ipynb  02_ff_train_a_model.ipynb  02_train_a_model.ipynb  02_train_a_model_ff.ipynb  02_train_a_model_orig.ipynb  03_mnist_classification.ipynb  03_mnist_classification_112x7.ipynb  03_mnist_classification_112x7_ep.ipynb  03_mnist_classification_112x7_gated.ipynb  03_mnist_classification_112x7_hierarchical.ipynb  03_mnist_classification_7x112.ipynb  03_mnist_classification_7x112_8input.ipynb  03_mnist_classification_backup.ipynb  03_mnist_classification_complex.ipynb  03_mnist_classification_parallel.ipynb  03_mnist_classification_sliding.ipynb  03_mnist_classification_sliding_ensemble.ipynb  03_mnist_classification_sliding_hierarchical.ipynb  04_forward_forward_mnist.ipynb  bias_neuron_comparison.ipynb  classification_comparator_bank_readout.ipynb  classification_complexity_study.ipynb  classification_equilibrium_propagation_mnist.ipynb  classification_forward_forward.ipynb  classification_forward_forward_mnist.ipynb  classification_forward_forward_mnist_recurrent.ipynb  classification_forward_forward_mnist_temporal.ipynb  classification_forward_forward_mnist_temporal_whh.ipynb  classification_pulse_equilibrium_propagation.ipynb  classification_singledendrite_readout.ipynb  hardware_primitives_exploration.ipynb  (+4 more)
wavestitch_ecei/: MODIFICATIONS.md  README.md  requirements.txt  run_train.sh  sample.py  train.py  training_utils.py
wavestitch_ecei/TSImputers/: __init__.py
wavestitch_ecei/data/: __init__.py  dataset.py
wavestitch_ecei/utils/: __init__.py  util.py
(+487 files in other folders)
